Abolish the TerrainBoundaryWorldObject interface